# PDFsenseI

./: .gitignore  App.jsx  README.md  app.py  appp.py  pyproject.toml  requirements.txt  requirments.txt
backend/: .gitignore  Dockerfile  __init__.py  app.py  requirements.txt
backend/routes/: __init__.py  chat_routes.py  document_routes.py  qa_routes.py
backend/services/: __init__.py  chat_manager.py  pdf_service.py  rag_pipeline.py
backend/utils/: __init__.py  text_splitter.py
backend/vectorstore/: __init__.py  embeddings.py  faiss_store.py
core/: __init__.py  embeddings.py  pdf_loader.py  rag_chain.py  text_splitter.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  Message.jsx  Sidebar.jsx  UploadPanel.jsx
frontend/src/services/: api.js
frontend/src/styles/: app.css
services/: __init__.py  chat_manager.py
ui/: sidebar.py
